# loggen

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  helm-lint.yml
helm/loggen/: Chart.yaml  README.md  index.yaml  loggen-0.1.0.tgz  loggen-0.1.1.tgz  loggen-0.1.2.tgz  loggen-0.1.3.tgz  loggen-0.1.4.tgz  values.yaml
helm/loggen/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
loggen/: __init__.py  main.py
tests/: test_loggen.py
