[project]
authors = [
  {name = "Smana", email = "smainklh@gmail.com"},
]
dependencies = [
  "click>=8.0.0,<9.0.0",
]
description = "A continuous log generator."
license = "Apache-2.0"
name = "loggen"
readme = "README.md"
requires-python = ">=3.13,<3.14"
urls = {homepage = "https://github.com/smana/loggen"}
version = "0.1.2"

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0,<1.0.0",
  "mypy>=1.0.0,<2.0.0",
  "bandit>=1.7.0,<2.0.0",
  "docformatter>=1.7.0,<2.0.0",
]
test = [
  "pytest>=7.0.0,<8.0.0",
  "pytest-cov>=4.0.0,<5.0.0",
]

[project.scripts]
loggen = "loggen.main:main"

[tool.pytest.ini_options]
addopts = "--cov=loggen --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "I"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.13"

[tool.setuptools.packages.find]
exclude = ["helm*"]
include = ["loggen*"]
where = ["."]
